--- a/foodapp.Rmd
+++ b/foodapp.Rmd
@@ -20,13 +20,11 @@ sapply(r_functions, source)
 This R Markdown document is create to check Food Demand Forecast.
 
 ## Read Data & Transform
-```{r read data, echo=FALSE, include=FALSE}
+```{r read data, echo=FALSE, include=FALSE, warning=FALSE, message=FALSE}
 targets::tar_load(c("complete_data", "test_results"))
 
 master_data <- complete_data[["master_data"]]
-
 modeltime_table <- test_results[["modeltime_table"]]
-
 test_results <- test_results[["test_results"]]
 
 statistics_fcast <- list.files(
@@ -39,12 +37,12 @@ statistics_fcast <- list.files(
 rm(complete_data)
 gc()
 
-meal_id <- unique(master_data$meal_id)
+# meal_id <- unique(master_data$meal_id)
 
-center_id <- unique(master_data$center_id)
+# center_id <- unique(master_data$center_id)
 ```
 
-```{r transform data, echo=FALSE}
+```{r transform data, echo=FALSE, warning=FALSE, message=FALSE}
 master_data <- master_data |> 
   dplyr::mutate(year = lubridate::year(date), week = lubridate::week(date))
 
@@ -82,24 +80,18 @@ statistics_accuracy_tbl <- statistics_fcast |>
 test_results <- statistics_fcast |> 
   dplyr::inner_join(statistics_accuracy_tbl, by = colnames(statistics_accuracy_tbl)) |> 
   dplyr::mutate(.model_desc = "Statistics") |> 
-  dplyr::bind_rows(test_results)
+  dplyr::bind_rows(test_results) |> 
+  dplyr::mutate(ts_id = paste0(center_id, "_", meal_id))
 
-common_items <- test_results |> 
-  dplyr::distinct(.model_desc, center_id, meal_id, idx = 1) |> 
-  tidyr::pivot_wider(
-    id_cols = dplyr::ends_with("_id"), 
-    values_from = idx,
-    names_from = .model_desc
-  ) |> 
-  tidyr::drop_na() |> 
-  dplyr::select(dplyr::ends_with("_id"))
+report_dt <- create_report(test_results)
 
 accuracy_tbl <- test_results |>
   accuracy_metric() |>
-  dplyr::inner_join(common_items, colnames(common_items)) |> 
+  dplyr::mutate(ts_id = paste0(center_id, "_", meal_id)) |> 
+  dplyr::inner_join(report_dt[["common_item"]], "ts_id") |>
   dplyr::mutate(
     .model_desc = stringr::str_replace(.model_desc, "RECIPE_", ""),
-    accuracy_rmsle = round(accuracy_rmsle, 2)
+     accuracy_rmsle = round(accuracy_rmsle, 2)
   )
 
 model_accuracy <- accuracy_tbl |>
@@ -115,24 +107,23 @@ model_accuracy <- accuracy_tbl |>
   )
 
 master_data <- master_data |>
-  dplyr::mutate(.model_desc = "Actual", .value = num_orders) |>
+  dplyr::mutate(
+    .model_desc = "Actual", 
+    .value = num_orders, 
+    ts_id = paste0(center_id, "_", meal_id)
+  ) |>
   dplyr::select(dplyr::all_of(colnames(test_results))) |>
   dplyr::bind_rows(test_results)
 ```
 
-```{r raw data viz, echo=FALSE}
-inputPanel(
-  selectInput("meal_id", label = "Meal ID", choices = meal_id),
-  
-  selectInput("center_id", label = "Center ID", choices = center_id)
-)
-
-# plotly::renderPlotly({
-#   master_data |>
-#     dplyr::filter(center_id == input$center_id, meal_id == input$meal_id) |>
-#     timetk::plot_time_series(.date_var = date, .value = num_orders, .smooth = FALSE)
-# })
+## Report:
+```{r, echo=FALSE}
+shiny::renderText(glue::glue("Total Number of Items: {report_dt[['N']]}"))
+shiny::renderText(glue::glue("Statistics Items: {report_dt[['S']]}"))
+shiny::renderText(glue::glue("ML Items: {report_dt[['M']]}"))
+shiny::renderText(glue::glue("Common Items: {nrow(report_dt[['common_item']])}"))
 ```
+
 
 ## Accuracy Table
 ```{r meal accuracy metric, echo=FALSE}
@@ -150,6 +141,26 @@ DT::renderDataTable(
 )
 ```
 
+## TS Plot
+```{r raw data viz, echo=FALSE}
+
+selectInput("ts_id", label = "TS ID", choices = report_dt[['common_item']]$ts_id)
+
+plotly::renderPlotly({
+  master_data |>
+    dplyr::filter(ts_id == input$ts_id) |> 
+    # dplyr::filter(center_id == input$center_id, meal_id == input$meal_id) |>
+    timetk::plot_time_series(
+      .date_var = date, 
+      .value = .value,
+      .smooth = FALSE,
+      .color_var = .model_desc
+    )
+})
+```
+
+
+## WRMSLE: Model Accuracy
 ```{r model accuracy, echo=FALSE}
 DT::renderDataTable(
   model_accuracy |>
@@ -160,19 +171,6 @@ DT::renderDataTable(
 )
 ```
 
-## After Forecast
-```{r forecast plot, echo=FALSE}
-plotly::renderPlotly({
-  master_data |>
-    dplyr::filter(center_id == input$center_id, meal_id == input$meal_id) |>
-    timetk::plot_time_series(
-      .date_var = date,
-      .value = .value,
-      .smooth = FALSE,
-      .color_var = .model_desc
-    )
-})
-```
 
 ## Variable Importance
 ```{r vip, echo=FALSE, warning=FALSE, message=FALSE}
